[package]
name = "qnap_fwdec"
description = "QNAP firmware image encryption/decryption tool"
version = "0.1.0"
authors = ["Hugo Grostabussiat <bonstra@bonstra.fr.eu.org>"]
license = "GPL-3.0-or-later"
readme = "README"
categories = ["command-line-utilities", "cryptography"]
keywords = ["qnap", "nas", "encryption", "decryption", "firmware", "tool"]
repository = "https://github.com/Bonstra/qnap_fwdec"

[dependencies]
getopts = "0.2"
